Remove unneeded preview flag